# qp-for-all-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  build.sh  fly.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
api/: admin.py  backends.py  router.py  schemas.py
api/fixtures/: curriculums.json  papers.json  qualifications.json  sessions.json  subjects.json
api/migrations/: 0001_initial.py
config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  local.py  main.py  production.py
scripts/: build.sh
subjects/: admin.py  api.py  backends.py  fixtures.json  models.py  schemas.py
subjects/fixtures/: curriculums.json  papers.json  qualifications.json  sessions.json  subjects.json
subjects/migrations/: 0001_initial.py  0002_session_alter_subject_curriculums_and_more.py  0003_paper.py  0004_paper_session.py  0005_alter_paper_curriculum_alter_paper_qualification_and_more.py  0006_remove_paper_subject_subject_papers.py  0007_paper_subject.py  0008_remove_subject_papers.py  0009_subject_papers.py  0010_alter_subject_papers_alter_subject_sessions.py  0011_paper_mark_scheme_paper_question_paper.py  0012_remove_paper_ms_url_remove_paper_qp_url.py  0013_alter_paper_mark_scheme_alter_paper_question_paper.py
templates/ninja/: swagger.html
thunder-tests/: thunderActivity.json
