[tool.poetry]
authors     = ["Mugdha Arunim Ahmed <mugdhaarunimahmed2017@gmail.com>"]
description = ""
name        = "backend"
readme      = "README.md"
version     = "0.1.0"

  [tool.poetry.dependencies]
  dj-database-url = "^1.0.0"
  django          = "^4.1.2"
  django-ninja    = "^0.19.1"
  gunicorn        = "^20.1.0"
  psycopg2-binary = "^2.9.5"
  python          = "^3.8"
  python-decouple = "^3.6"
  whitenoise      = { extras = ["brotli"], version = "^6.2.0" }
  simplejson = "^3.18.0"

  [tool.poetry.group.dev.dependencies]
  black         = "^22.10.0"
  commitizen    = "^2.37.1"
  django-stubs  = { extras = ["compatible-mypy"], version = "^1.12.0" }
  isort         = { extras = ["requirements_deprecated_finder"], version = "^5.10.1" }
  mypy          = ">=0.930,<0.970"
  poethepoet    = "^0.16.4"
  pre-commit    = "^2.20.0"
  pylint        = { version = "2.14.5", python = ">=3.7.2,<4.0" }
  pylint-django = "^2.5.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.poe.poetry_hooks]
post_add     = "export"
post_install = "post_install"
post_lock    = "export"
post_remove  = "export"
post_update  = "post_update"

[tool.poe.tasks]
dev    = { cmd = "python manage.py runserver 0.0.0.0:8000", env = { DEBUG = "True" } }
export = { shell = "poetry export --without-hashes -o requirements.txt" }

  [tool.poe.tasks.post_install]
  sequence = ['export', { cmd = 'pre-commit install --hook-type commit-msg --hook-type pre-commit' }]

  [tool.poe.tasks.post_update]
  sequence = ['export', { cmd = 'pre-commit autoupdate' }]

[tool.commitizen]
name       = "cz_conventional_commits"
tag_format = "v$version"
version    = "0.3.0"

[tool.pyright]
exclude = [".venv"]

[tool.pylint.main]
disable                = ["wrong-import-order", "C0114", "C0115", "C0116", "W0223"]
django-settings-module = "config.settings"
ignore-patterns        = ["migrations/", "__init__.py"]
load-plugins           = ["pylint_django", "pylint_django.checkers.migrations"]

[tool.pylint.format]
max-line-length = "79"

[tool.isort]
default_section    = "THIRDPARTY"
known_first_party  = ["django"]
known_local_folder = ["config", "subjects"]
known_third_party  = ["decouple", "ninja"]
profile            = "django"
skip_gitignore     = true
skip_glob          = ["**/migrations/*"]

[tool.black]
line-length = 79

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
